import {
    AddictionDTO, BackgroundDTO, BirthsignDTO,
    CharacterDTO, CharacterGenInstructionDTO,
    CharacterGroupGenInstructionDTO, CharacterMemoryDTO,
    CharacterProfessionDTO, DiseaseDTO, EffectDTO,
    EquipmentSlotDTO, FactDTO, FactionDTO, ItemDTO,
    ItemSetDTO, MemoryDTO, MemoryPoolDTO, MemoryPoolEntryDTO,
    MoodDTO, NeedDTO, PastExperienceDTO, PersonalityProfileDTO,
    RaceDTO, ReligionDTO, ResistanceDTO, SkillDTO,
    SkillSetDTO, StatusDTO, StorageSlotDTO, TagDTO, TraitDTO
} from "./proto/common_pb";
import { ClassConstructor } from "./types";


export const CONTENT_ENTITY_DTO_MAP: { [name: string]: ClassConstructor<any> } = {
    "ItemAlcohol": ItemDTO,
    "ItemDrinkable": ItemDTO,
    "ItemPotion": ItemDTO,
    "ItemWater": ItemDTO,
    "ItemEdible": ItemDTO,
    "ItemFood": ItemDTO,
    "ItemArrow": ItemDTO,
    "ItemConsumable": ItemDTO,
    "ItemMisc": ItemDTO,
    "ItemMiscCurrency": ItemDTO,
    "ItemWeapon": ItemDTO,
    "ItemWeaponRanged": ItemDTO,
    "ItemWeaponLongSword": ItemDTO,
    "ItemWeaponShortSword": ItemDTO,
    "ItemWearable": ItemDTO,
    "ItemWearableBackpack": ItemDTO,
    "ItemWearableClothesPants": ItemDTO,
    "ItemWearableClothesTorso": ItemDTO,
    "ItemWearableCuirass": ItemDTO,
    "ItemWearableFeet": ItemDTO,
    "ItemWearableGreaves": ItemDTO,
    "ItemWearableHead": ItemDTO,
    "ItemWearableShield": ItemDTO,
    "ItemRepairable": ItemDTO,
    "Item": ItemDTO,
    "PastExperience": PastExperienceDTO,
    "CharacterMemory": CharacterMemoryDTO,
    "Memory": MemoryDTO,
    "MemoryPool": MemoryPoolDTO,
    "MemoryPoolEntry": MemoryPoolEntryDTO,
    "Skill": SkillDTO,
    "SkillSet": SkillSetDTO,
    "EquipmentSlot": EquipmentSlotDTO,
    "StorageSlot": StorageSlotDTO,
    "Trait": TraitDTO,
    "Addiction": AddictionDTO,
    "Background": BackgroundDTO,
    "Birthsign": BirthsignDTO,
    "Character": CharacterDTO,
    "CharacterGenInstruction": CharacterGenInstructionDTO,
    "CharacterGroupGenInstruction": CharacterGroupGenInstructionDTO,
    "CharacterProfession": CharacterProfessionDTO,
    "Disease": DiseaseDTO,
    "Effect": EffectDTO,
    "Fact": FactDTO,
    "Faction": FactionDTO,
    "ItemSet": ItemSetDTO,
    "Mood": MoodDTO,
    "Need": NeedDTO,
    "PersonalityProfile": PersonalityProfileDTO,
    "Race": RaceDTO,
    "Religion": ReligionDTO,
    "Resistance": ResistanceDTO,
    "Status": StatusDTO,
    "Tag": TagDTO,
}